--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,9 @@ smoltcp = { version = "0.5.0", default-features = false, features = ["proto-ipv4
 log = { version = "0.4", optional = true }
 
 [dependencies.stm32f2xx-hal]
-path = "../../hal/stm32f2xx-hal"
+# path = "../../hal/stm32f2xx-hal"
+git = "https://github.com/mabezdev/stm32f2xx-hal"
+rev = "6340a6c1e29d1208f98f377670aa9a6dc00fb958"
 features = ["rt"]
 version = "0.1.0"
 
